fix Checkbox and Radio text alignment with form label, close #5276

--- a/components/checkbox/style/mixin.less
+++ b/components/checkbox/style/mixin.less
@@ -10,7 +10,7 @@
     display: inline-block;
     line-height: 1;
     position: relative;
-    vertical-align: middle;
+    vertical-align: text-bottom;
 
     .@{checkbox-prefix-cls}-wrapper:hover &,
     &:hover &-inner,
@@ -131,7 +131,6 @@
   .@{checkbox-prefix-cls} + span {
     padding-left: 8px;
     padding-right: 8px;
-    vertical-align: middle;
   }
 
   .@{checkbox-prefix-cls}-group {
