--- a/components/radio/style/index.less
+++ b/components/radio/style/index.less
@@ -27,7 +27,7 @@
   display: inline-block;
   position: relative;
   line-height: 1;
-  vertical-align: middle;
+  vertical-align: text-bottom;
   cursor: pointer;
   .@{radio-prefix-cls}-wrapper:hover &,
   &:hover,
@@ -110,7 +110,6 @@
 span.@{radio-prefix-cls} + * {
   padding-left: 8px;
   padding-right: 8px;
-  vertical-align: middle;
 }
 
 .@{radio-prefix-cls}-button-wrapper {
